Remove old projects, rename sandbox to skills development, style adjustments

--- a/elements/ce-blog/ce-blog.html
+++ b/elements/ce-blog/ce-blog.html
@@ -5,10 +5,10 @@
   <template>
   	<paper-material>
   		<h1>Blog</h1>
-  		<label>Select a post </label>
+  		<label>Select a post: </label>
   		<select value='{{post::change}}'>
   			<option value="linked-list.html">Linked List</option>
-  			<option value="recursion">Recursion</option>
+  			<option value="recursion.html">Recursion</option>
   		</select>
 		</paper-material>
 
