--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-tab nav='home'><a href="#/"><iron-icon icon='icons:home'></iron-icon><span class='nav-label'>Home</span></a></paper-tab>
             <paper-tab nav='blog'><a href="#/blog"><iron-icon icon='icons:speaker-notes'></iron-icon><span class='nav-label'>Blog</span></a></paper-tab>
             <paper-tab nav='projects'><a href="#/projects"><iron-icon icon='icons:build'></iron-icon><span class='nav-label'>Projects</span></a></paper-tab>
-            <paper-tab nav='sandbox'><a href="#/sandbox"><iron-icon icon='icons:lightbulb-outline'></iron-icon><span class='nav-label'>Sandbox</span></a></paper-tab>
+            <paper-tab nav='skills'><a href="#/skills"><iron-icon icon='icons:lightbulb-outline'></iron-icon><span class='nav-label'>Skills Development</span></a></paper-tab>
           </paper-tabs>
         </app-toolbar>
       </app-header>
