Try removing condenses

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body>
   <template is='dom-bind' id='app'>
     <app-header-layout id='headerLayout'>
-      <app-header reveals fixed condenses class='header'>
+      <app-header reveals fixed class='header'>
       <!-- Title -->
         <app-toolbar class='title'> <div title>ChadEddington.github.io</div></app-toolbar>
         <!-- Navigation -->
