Add web component skills section, update gulp watch

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -15,3 +15,5 @@
 
 <!-- Custom Elements -->
 <link rel="import" href="ce-blog/ce-blog.html">
+<link rel="import" href="github-native-wc/github-native-wc.html">
+<link rel="import" href="github-polymer-wc/github-polymer-wc.html">
