Use on click instead?

--- a/elements/nav-menu.html
+++ b/elements/nav-menu.html
@@ -54,12 +54,12 @@
 			}
 		</style>
 
-		<i class="menu-btn" on-tap='toggleMenu'></i>
+		<i class="menu-btn" on-click='toggleMenu'></i>
 		<div id='mobileNav' class$='[[_getDisplayMenu(visible)]]'>
-			<a class="nav-link" href="#/home" on-tap='toggleMenu'>home</a>
-      <a class="nav-link" href="#/projects" on-tap='toggleMenu'>projects</a>
-      <a class="nav-link" href="#/blog" on-tap='toggleMenu'>blog</a>
-      <a class="nav-link" href="#/skills" on-tap='toggleMenu'>skills</a>
+			<a class="nav-link" href="#/home" on-click='toggleMenu'>home</a>
+      <a class="nav-link" href="#/projects" on-click='toggleMenu'>projects</a>
+      <a class="nav-link" href="#/blog" on-click='toggleMenu'>blog</a>
+      <a class="nav-link" href="#/skills" on-click='toggleMenu'>skills</a>
 		</div>
 		
 	</template>
