--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <app-toolbar>
         <div main-title>💻 &nbsp; Chad Eddington</div>
         <div id='nav'>
-          <a class="nav-link" href="#/home">home</a>
-          <a class="nav-link" href="#/projects">projects</a>
-          <a class="nav-link" href="#/blog">blog</a>
-          <a class="nav-link" href="#/skills">skills</a>
+          <a class="nav-link" href="#/home">Home</a>
+          <a class="nav-link" href="#/projects">Projects</a>
+          <a class="nav-link" href="#/blog">Blog</a>
+          <a class="nav-link" href="#/skills">Skills</a>
         </div>
         <nav-menu></nav-menu>
       </app-toolbar>
