Add Sandbox, refactor router, add emojis

--- a/elements/nav-menu.html
+++ b/elements/nav-menu.html
@@ -56,10 +56,10 @@
 
 		<i class="menu-btn" on-click='toggleMenu'></i>
 		<div id='mobileNav' class$='[[_getDisplayMenu(visible)]]'>
-			<a class="nav-link" href="#/home" on-click='toggleMenu'>Home</a>
-      <a class="nav-link" href="#/projects" on-click='toggleMenu'>Projects</a>
-      <a class="nav-link" href="#/blog" on-click='toggleMenu'>Blog</a>
-      <a class="nav-link" href="#/skills" on-click='toggleMenu'>Skills</a>
+			<a class="nav-link" href="#/home" on-click='toggleMenu'>🏠 &nbsp; Home</a>
+      <a class="nav-link" href="#/projects" on-click='toggleMenu'>📓 &nbsp; Projects</a>
+      <a class="nav-link" href="#/sandbox">🏖️ &nbsp; Sandbox</a>
+      <a class="nav-link" href="#/skills" on-click='toggleMenu'>💪 &nbsp; Skills</a>
 		</div>
 		
 	</template>
