Add page title image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <app-header-layout>
     <app-header class="header" slot="header" fixed  fullbleed condenses effects="waterfall">
       <app-toolbar>
-        <div main-title>💻 &nbsp; Coding Sandbox</div>
+        <div main-title>💻 &nbsp; Web Development</div>
         <div id='nav'>
           <a class="nav-link" href="#/home">🏠 &nbsp; Home</a>
           <a class="nav-link" href="#/projects">📓 &nbsp; Projects</a>
@@ -45,7 +45,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </app-header>
     <div class="main-content">
       <!-- Main content -->
-      <div id="page"></div>
+      <div id="page" class="page"></div>
     </div>
   </app-header-layout>
  
