Add format to other pages

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <app-header-layout>
     <app-header class="header" slot="header" fixed  fullbleed condenses effects="waterfall">
       <app-toolbar>
-        <div main-title>💻 &nbsp; Web Development</div>
+        <div main-title>Web Development</div>
         <div id='nav'>
-          <a class="nav-link" href="#/home">🏠 &nbsp; Home</a>
-          <a class="nav-link" href="#/projects">📓 &nbsp; Projects</a>
-          <a class="nav-link" href="#/sandbox">🏖️ &nbsp; Sandbox</a>
-          <a class="nav-link" href="#/skills">💪 &nbsp; Skills</a>
+          <a class="nav-link" href="#/home">Home</a>
+          <a class="nav-link" href="#/projects">Projects</a>
+          <a class="nav-link" href="#/sandbox">Sandbox</a>
+          <a class="nav-link" href="#/skills">Skills</a>
         </div>
         <nav-menu></nav-menu>
       </app-toolbar>
