--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <app-header-layout>
     <app-header class="header" slot="header" fixed  fullbleed condenses effects="waterfall">
       <app-toolbar>
-        <div main-title>Web Development</div>
+        <div main-title>Chad Eddington</div>
         <div id='nav'>
           <a class="nav-link" href="#/home">Home</a>
           <a class="nav-link" href="#/projects">Projects</a>
