--- a/elements/nav-menu.html
+++ b/elements/nav-menu.html
@@ -37,13 +37,13 @@
 			
 			.show-menu {
 				height: 190px;
-				background-color: #282C34;
+				background-color: black;
 				transition: height .5s;
 			}
 
 			.hide-menu {
 				height: 0px;
-				background-color: #282C34;
+				background-color: black;
 				transition: height .5s;
 			}
 
