--- a/elements/elements.html
+++ b/elements/elements.html
@@ -13,8 +13,8 @@
 
 
 <!-- Custom Elements -->
-<link rel="import" href="app-nav.html">
+<!-- <link rel="import" href="app-nav.html"> -->
 <link rel="import" href="nav-menu.html">
-<link rel="import" href="ce-blog/ce-blog.html">
+<!-- <link rel="import" href="ce-blog/ce-blog.html"> -->
 <link rel="import" href="github-native-wc/github-native-wc.html">
 <link rel="import" href="github-polymer-wc/github-polymer-wc.html">
