Add blog placeholder

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div main-title>Chad Eddington</div>
         <div id='nav'>
           <a class="nav-link" href="#/home">Home</a>
+          <a class="nav-link" href="#/blog">Blog</a>
           <a class="nav-link" href="#/projects">Projects</a>
           <a class="nav-link" href="#/sandbox">Sandbox</a>
           <a class="nav-link" href="#/skills">Skills</a>
@@ -48,8 +49,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div id="page" class="page"></div>
     </div>
   </app-header-layout>
- 
+
 <script type="text/javascript" src='scripts/app.js'></script>
-  
+
 </body>
 </html>
