--- a/index.html
+++ b/index.html
@@ -19,16 +19,24 @@
     </div>
   
     <main>
-      <h3>Games</h3>
-      <div class="link"><a href="projects/phaser/zelda">Phaser Game Engine: Zelda</a></div>
-      <div class="link"><a href="projects/phaser/phaser-dude/phaser-dude.html">Phaser Game Engine: Phaser Dude</a></div>
-      <div class="link"><a href="projects/melon">Melon Game Engine</a></div>
-      <div class="link"><a href="projects/snake.html">HTML Game: Snake</a></div>
-  
-      <h3>Other</h3>
-      <div class="link"><a href="https://chadeddington.github.io/sprites/">Sprite Animation</a></div>
-      <div class="link"><a href="https://chadeddington.github.io/isometric/">Isometric View</a></div>
-      <div class="link"><a href="projects/web-audio">Using Web Audio</a></div>
+      <h2 style="text-align: center;">My Sandbox</h2>
+
+      <div class="links">
+        <div class="column">
+          <h3>Games</h3>
+          <div class="link"><a href="projects/phaser/zelda">Phaser Game Engine: Zelda</a></div>
+          <div class="link"><a href="projects/phaser/phaser-dude/phaser-dude.html">Phaser Game Engine: Phaser Dude</a></div>
+          <div class="link"><a href="projects/melon">Melon Game Engine</a></div>
+          <div class="link"><a href="projects/snake.html">HTML Game: Snake</a></div>
+        </div>
+        
+        <div class="column">
+          <h3>Other</h3>
+          <div class="link"><a href="https://chadeddington.github.io/sprites/">Sprite Animation</a></div>
+          <div class="link"><a href="https://chadeddington.github.io/isometric/">Isometric View</a></div>
+          <div class="link"><a href="projects/web-audio">Using Web Audio</a></div>
+        </div>
+      </div>
     </main>
   </div>
   
