--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="hero">
       <h1>chadeddington.github.io</h1>
-      <h3>A Sample github.io page</h3>
+      <h3>A sample github.io page</h3>
     </div>
   
     <main>
