Add cit261 fluency examples

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
           <div class="link"><a href="projects/web-audio">Using Web Audio</a></div>
         </div>
       </div>
+
+      <div class="links" style="margin-top: 50px">
+        <div class="column">
+          <h2 style="text-align: center;">CIT 261</h2>
+          <div class="link"><a href="CIT261/basic_fluency.html">Basic Fluency Example</a></div>
+          <div class="link"><a href="CIT261/working_fluency.html">Working Fluency Example</a></div>
+          <div class="link"><a href="CIT261/skilled_fluency.html">Skilled Fluency Example</a></div>
+        </div>
+      </div>
     </main>
   </div>
   
