--- a/CIT261/skilled_fluency.html
+++ b/CIT261/skilled_fluency.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Skilled Fluency</title>
+  <link rel="stylesheet" href="../styles/header-footer.css">
+  <script type="module" src="../web-components/my-footer.js"></script>
   <style>
     body {
       font-family: sans-serif;
@@ -51,8 +53,6 @@
       background-color: red;
       color: white;
     }
-
-
   </style>
 
   <script>
@@ -83,6 +83,12 @@
   </script>
 </head>
 <body>
+  <header>
+    <div class="hero">
+      <h1><a href="../index.html">chadeddington.github.io</a></h1>
+      <h3>A sample github.io page</h3>
+    </div>
+  </header>
   <div class="container">
     <h1>Skilled Fluency</h1>
     <h2>To Do List</h2>
@@ -96,5 +102,6 @@
       </ul>
     </div>
   </div>
+  <my-footer></my-footer>
 </body>
 </html>
