--- a/CIT261/working_fluency.html
+++ b/CIT261/working_fluency.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Working Fluency</title>
+  <link rel="stylesheet" href="../styles/header-footer.css">
+  <script type="module" src="../web-components/my-footer.js"></script>
   <style>
     body {
       font-family: sans-serif;
@@ -56,6 +58,12 @@
   </script>
 </head>
 <body>
+  <header>
+    <div class="hero">
+      <h1><a href="../index.html">chadeddington.github.io</a></h1>
+      <h3>A sample github.io page</h3>
+    </div>
+  </header>
   <div class="container">
       <h1>Working Fluency Example</h1>
 
@@ -86,6 +94,6 @@
 
     </div>
   </div>
-  
+  <my-footer></my-footer>
 </body>
 </html>
