home page content

--- a/cit261/index.html
+++ b/cit261/index.html
@@ -24,7 +24,7 @@
     <main>
       <div class="links" style="margin-top: 50px">
         <div class="column">
-          <h2 style="text-align: center;">CIT 261</h2>
+          <h2 style="text-align: center;">Fluency Examples</h2>
           <div class="link"><a href="./basic_fluency.html">Basic Fluency Example</a></div>
           <div class="link"><a href="./working_fluency.html">Working Fluency Example</a></div>
           <div class="link"><a href="./skilled_fluency.html">Skilled Fluency Example</a></div>
