--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="styles/header-footer.css">
   <script type="module" src="web-components/my-footer.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <style>
+    main {
+      text-align: center;
+    }
+    p {
+      padding: 50px;
+      max-width: 600px;
+      margin: auto;
+      font-size: 28px;
+      text-align: left;
+      font-family: 'Open Sans', sans-serif;
+      white-space: pre-line;
+    }
+    img {
+      margin-top: 20px;
+      border-radius: 50%;
+      box-shadow: 0 2px 4px 0 rgba(0,0,0,0.6),0 2px 10px 0 rgba(0,0,0,0.6);
+    }
+  </style>
 </head>
 
 <body>
@@ -22,35 +42,17 @@
   </header>
   <div class="container">
     <main>
-      
+      <img src="assets/images/standing_on_chair.JPG" alt="">
+      <p>Hello,
+
+        This is where I keep some of stuff. 
+
+        If I want to try something or test something out I'll often come put it somewhere on this site.
+
+        I've also got references for a class I teach and demonstrations for tracking skills.
+      </p>
     </main>
   </div>
   <my-footer></my-footer>
-  
-  <!-- <footer>
-    <div class="links">
-      <div class="column">
-        <h3 class="link">Games</h3>
-        <div class="link"><a href="projects/phaser/zelda">Zelda</a></div>
-        <div class="link"><a href="projects/phaser/phaser-dude/phaser-dude.html">Phaser Dude</a></div>
-        <div class="link"><a href="projects/snake.html">Snake</a></div>
-      </div>
-
-      <div class="column">
-        <h3 class="link"><a href="cit261/index.html">CIT 261</a></h3>
-        <div class="link"><a href="cit261/basic_fluency.html">Basic Fluency Example</a></div>
-        <div class="link"><a href="cit261/working_fluency.html">Working Fluency Example</a></div>
-        <div class="link"><a href="cit261/skilled_fluency.html">Skilled Fluency Example</a></div>
-      </div>
-      
-      <div class="column">
-        <h3 class="link">Misc</h3>
-        <div class="link"><a href="https://chadeddington.github.io/sprites/">Sprite Animation</a></div>
-        <div class="link"><a href="https://chadeddington.github.io/isometric/">Isometric View</a></div>
-        <div class="link"><a href="projects/web-audio">Using Web Audio</a></div>
-      </div>
-    </div>
-  </footer> -->
-
 </body>
 </html>
