Update css apprentice

--- a/cit261/index.html
+++ b/cit261/index.html
@@ -16,8 +16,10 @@
 <body>
   <header>
     <div class="hero">
-      <h1><a href="../index.html">chadeddington.github.io</a></h1>
-      <div class="sub">A sample github.io page</div>
+      <div class="img-wrapper">
+        <a href="../../index.html"><img src="/assets/images/standing_on_chair.JPG" alt=""></a>
+      </div>
+      <h1>CIT 261</h1>
     </div>
   </header>
   <div class="container">
