--- a/index.html
+++ b/index.html
@@ -15,28 +15,30 @@
       rel="stylesheet"
     />
     <style>
-      main {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: inherit;
-      }
       p {
-        padding: 50px;
-        max-width: 600px;
-        margin: auto;
-        font-size: 34px;
-        text-align: left;
+        font-size: 58px;
         font-family: "Karla", sans-serif;
-        white-space: pre-line;
       }
+
+      @media (max-width: 690px) {
+        p {
+          font-size: 38px;
+        }
+      }
+
+      @media (max-width: 450px) {
+        p {
+          font-size: 26px;
+        }
+      }
+
     </style>
   </head>
 
   <body>
     <header>
       <div class="hero">
-        <h1>chadeddington.github.io</h1>
+        <h1>Home</h1>
       </div>
     </header>
     <div class="container">
@@ -48,10 +50,9 @@
       <main>
         <div class="group">
           <p>
-            Welcome, This is where I keep some of my stuff. If I want to try
-            something or test something out I'll often come put it somewhere on
-            this site. I've also got references for a class I teach and
-            demonstrations for tracking skills.
+            Hello 👋🏻</p>
+           <p> I'm Chad 👨🏻‍🦰 </p>
+            <p>I am a web developer 💻
           </p>
         </div>
       </main>
