--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/header-footer.css" />
     <script type="module" src="web-components/my-footer.js"></script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Karla"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <style>
+      .group {
+        max-width: 600px;
+        margin: auto;
+      }
+
       p {
         font-size: 58px;
-        font-family: "Karla", sans-serif;
+        line-height: 1.5;
+        font-family: "Ubuntu Mono", monospace;
       }
 
       @media (max-width: 690px) {
@@ -50,9 +53,10 @@
       <main>
         <div class="group">
           <p>
-            Hello 👋🏻</p>
-           <p> I'm Chad 👨🏻‍🦰 </p>
-            <p>I am a web developer 💻
+            Hello 👋🏻
+          </p>
+          <p>
+            My name is Chad and I'm a web developer 💻 ...
           </p>
         </div>
       </main>
