--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script type="module" src="web-components/my-footer.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <style>
+      h1 {
+        text-align: center;
+      }
       .group {
         max-width: 600px;
         margin: auto;
@@ -52,12 +55,48 @@
       </div>
       <main>
         <div class="group">
-          <p>
-            Hello 👋🏻
-          </p>
-          <p>
-            My name is Chad and I'm a web developer 💻 ...
-          </p>
+          <h1>Main Links</h1>
+          <h2>CIT 261</h2>
+          <div class="link">
+            <a href="cit261/index.html">Main</a>
+          </div>
+          <div class="link">
+            <a href="cit261/simple_todo.html">Simple To-Do List</a>
+          </div>
+          <div class="link">
+            <a href="cit261/basic_fluency.html">Basic Fluency Example</a>
+          </div>
+          <div class="link">
+            <a href="cit261/working_fluency.html">Working Fluency Example</a>
+          </div>
+          <div class="link">
+            <a href="cit261/skilled_fluency.html">Skilled Fluency Example</a>
+          </div>
+
+          <h2>Skill Development</h2>
+          <div class="link">
+            <a href="views/skills.html">All</a>
+          </div>
+          <div class="link">
+            <a href="views/html5/apprentice.html">HTML Apprentice</a>
+          </div>
+          <div class="link">
+            <a href="views/css/apprentice.html">CSS Apprentice</a>
+          </div>
+
+          <h2>Projects</h2>
+          <div class="link">
+            <a href="/projects/web-audio/index.html">Web Audio Recording</a>
+          </div>
+          <div class="link">
+            <a href="/projects/snake.html">Snake Game</a>
+          </div>
+          <div class="link">
+            <a href="/projects/phaser/zelda/">Zelda Game</a>
+          </div>
+
+
+          
         </div>
       </main>
     </div>
