--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
           <div class="link">
             <a href="views/css/apprentice.html">CSS Apprentice</a>
           </div>
+          <div class="link">
+              <a href="views/javascript/apprentice.html">JavaScript Apprentice</a>
+            </div>
 
           <h2>Projects</h2>
           <div class="link">
